# roulette

./: LICENSE  README.md
backend/: Cargo.toml
backend/src/: helper.rs  judge.rs  main.rs  spin_timmer.rs  structs.rs  ws_messages.rs  ws_messages_handler.rs
frontend/: README.md  index.html
frontend/src/: App.tsx  index.css
frontend/src/components/game-screen/: game-screen.tsx
frontend/src/entities/: Board.ts  board.ts  button.ts  chip.ts  colors.ts  spin_button.ts  status_message.ts  traits.ts  wallet.ts  wheel.ts
meta/: run_servers
meta/reverse_proxy_server/: Cargo.toml
meta/reverse_proxy_server/src/: main.rs  reverse_proxy_service.rs
