[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
log = "0.4.22"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
serde = { version = "1.0.217", features = ["rc"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
